--- a/src/component/css_file/Menu.css
+++ b/src/component/css_file/Menu.css
@@ -1,7 +1,7 @@
 
 .menu-container {
     width: 100%;
-    height: 150vh;
+    height: 90vmax;
     display: flex;
     flex-direction: column;
     align-items: center;
